# euxis

./: .bandit.yml  .buildinfo  .clang-tidy  .claudeignore  .dockerignore  .editorconfig  .env.template  .euxisignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-hooks.yaml  .semgrepignore  AUDIT-2026-EUXIS-SUPERIOR.md  CHANGELOG.md  CI-ENFORCEMENT-MANIFEST.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  CROSS_PLATFORM_VERIFICATION.md  Doxyfile.in  EUXIS_TUI_100X_ROADMAP.md  EUXIS_TUI_ROADMAP.md  EUXIS_V2_ARCH.md  FLEET_GUIDE.md  KEYBOARD_SHORTCUTS.md  LICENSE  Makefile  NOTICE  README.html  README.md  README_BRIDGE.md  SECURITY.md  SHELL_SCRIPT_DOCUMENTATION_AUDIT.md  STYLE_GUIDE.md  UI_INTERACTION_GUIDE.md  USER_GUIDE.md  agent-development-guide.html  api-architecture-design.html  (+64 more)
apps/cli/: CMakeLists.txt  README.md  TEMPLATE_CONFORMANCE.md
apps/etx/: CMakeLists.txt  README.md  TEMPLATE_CONFORMANCE.md
apps/gateway/: CMakeLists.txt  README.md  TEMPLATE_CONFORMANCE.md
apps/publisher/: CMakeLists.txt  README.md
cmd/cli/: CMakeLists.txt  README.md  TEMPLATE_CONFORMANCE.md
docs/euxis-sdk/: Cargo.toml
euxis-a2a/: README.md  pyproject.toml
euxis-a2a/docs/: module-template.md
euxis-adapters/: .euxis-template.json  API_SUMMARY.md  README.md  TEMPLATE_CONFORMANCE.md  pyproject.toml
euxis-adapters/tests/: conftest.py  test_adapters_platform_scaffold.py  test_discord_whatsapp_adapters.py  test_sdk_registry.py  test_slack_adapter.py  test_smoke.py  test_telegram_adapter.py
euxis-bridge/: .euxis-template.json  API_SUMMARY.md  README.md  TEMPLATE_CONFORMANCE.md  pyproject.toml
euxis-cli/: .euxis-template.json  API_SUMMARY.md  EXTRACTION_CHECKLIST.md  README.md  TEMPLATE_CONFORMANCE.md  pyproject.toml
euxis-cli/completions/: euxis.bash  euxis.fish  euxis.zsh
euxis-cli/tests/: conftest.py  test_dispatch_concurrency.sh  test_dispatch_integration.py  test_license_check.sh  test_mesh_communication.sh  test_mesh_concurrent.sh  test_mesh_handshake.sh  test_orchestration_e2e.sh  test_router.sh  test_stage_execution.py  verify_concurrency_tests.py
euxis-core/: .euxis-template.json  CHANGELOG.md  CONTRIBUTING.md  README.md  TEMPLATE_CONFORMANCE.md  pyproject.toml
euxis-core/agents/: registry.db  registry.db.backup.20260216-225036  registry.json  squads.json
euxis-core/config/: README.md  capabilities.json  cli-schema.json  router.json
euxis-core/hooks/: pre-commit-schema-sync
euxis-core/lib/: agents.sh  cli.sh  common.sh  core.sh  dispatch.sh  memory.sh  mesh.sh  platform.sh  prompt.sh  providers.sh  registry_sql.sh  resources.sh  router.sh  session.sh  template.sh  trace.sh  ui.sh  validation.sh
euxis-core/tests/: README.md  __init__.py  conftest.py  run_shell_tests.sh  test_async_patterns.py  test_file_locking.py  test_message_bus.py  test_plugin_registration.sh  test_race_conditions.py  test_subprocess_cancel.py
euxis-cpp/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  STRATEGIC-TUI-UX-2026.md  vcpkg.json
euxis-cpp/build-cov/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  coverage_final.txt  coverage_final_v2.txt  coverage_new.txt
euxis-cpp/cmake/: EuxisDefaults.cmake  EuxisPackage.cmake
euxis-cpp/euxis-a2a-cpp/: .euxis-template.json  CMakeLists.txt  README.md  TEMPLATE_CONFORMANCE.md
euxis-cpp/euxis-adapters-cpp/: .euxis-template.json  CMakeLists.txt
euxis-cpp/euxis-bench-cpp/: .euxis-template.json  CMakeLists.txt  README.md
euxis-cpp/euxis-bridge-cpp/: .euxis-template.json  CMakeLists.txt  README.md
euxis-cpp/euxis-cli-cpp/: .euxis-template.json  CMakeLists.txt  README.md
euxis-cpp/euxis-core-cpp/: .euxis-template.json  CMakeLists.txt  TEMPLATE_CONFORMANCE.md
euxis-cpp/euxis-crypto-cpp/: .euxis-template.json  CMakeLists.txt  README.md
euxis-cpp/euxis-etx/: .euxis-template.json  CMakeLists.txt  README.md
euxis-cpp/euxis-gateway-cpp/: .euxis-template.json  CMakeLists.txt  TEMPLATE_CONFORMANCE.md
euxis-cpp/euxis-identity-cpp/: .euxis-template.json  README.md  TEMPLATE_CONFORMANCE.md
euxis-cpp/euxis-inference-cpp/: .euxis-template.json  CMakeLists.txt  README.md  TEMPLATE_CONFORMANCE.md
euxis-cpp/euxis-memory-cpp/: .euxis-template.json  CMakeLists.txt
euxis-cpp/euxis-metrics-cpp/: .euxis-template.json  CMakeLists.txt  README.md  TEMPLATE_CONFORMANCE.md
euxis-cpp/euxis-runtime-cpp/: .euxis-template.json  CMakeLists.txt
euxis-cpp/euxis-scripts-cpp/: .euxis-template.json  CMakeLists.txt  README.md  TEMPLATE_CONFORMANCE.md
euxis-cpp/euxis-security-cpp/: .euxis-template.json  CMakeLists.txt  README.md  TEMPLATE_CONFORMANCE.md
euxis-cpp/tests-integration/: CMakeLists.txt  regression_manifest.json  test_bridge_admission_pipeline.cpp  test_cli_dispatch_pipeline.cpp  test_core_resilience_swarm.cpp  test_crypto_memory_roundtrip.cpp  test_metrics_collection_analysis.cpp
euxis-crypto/: .euxis-template.json  CONTRIBUTING.md  Cargo.toml  README.md  TEMPLATE_CONFORMANCE.md  pyproject.toml
euxis-crypto-lib/: Cargo.toml  README.md  pyproject.toml
euxis-crypto-lib/docs/: encryption.md  index.md
euxis-crypto-lib/src/: lib.rs
euxis-crypto-lib/tests/: test_async_core.py  test_coverage_gaps.py  (+2 more)
euxis-docs/: .euxis-template.json  CHANGELOG.md  Makefile  README.md  TEMPLATE_CONFORMANCE.md  pyproject.toml
euxis-gateway/: .euxis-template.json  API_SUMMARY.md  README.md  TEMPLATE_CONFORMANCE.md  pyproject.toml
euxis-inference/: README.md  pyproject.toml
euxis-metrics/: .euxis-template.json  API_SUMMARY.md  README.md  TEMPLATE_CONFORMANCE.md  pyproject.toml
euxis-runtime/: .euxis-template.json  README.md  TEMPLATE_CONFORMANCE.md  pyproject.toml
euxis-sdk/: .euxis-template.json  Cargo.toml  TEMPLATE_CONFORMANCE.md
euxis-sdk-rust/: Cargo.toml  README.md
euxis-security/: .euxis-template.json  API_SUMMARY.md  EXTRACTION_CHECKLIST.md  README.md  TEMPLATE_CONFORMANCE.md  pyproject.toml
euxis-tui/: .euxis-template.json  API_SUMMARY.md  Cargo.toml  README.md  TEMPLATE_CONFORMANCE.md  pyproject.toml
(+37177 files in other folders)
